# python-sdk

./: pyproject.toml
src/vers_sdk/: __init__.py  client.py  errors.py  models.py
tests/: test_client.py
